--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "discordtestbot",
+  "name": "Discord-Overwatch-Leaderboard",
   "version": "1.0.0",
   "description": "Learning how to make a discord bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "8.11.3"
   },
   "repository": {
     "type": "git",
