--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "homepage": "https://github.com/Zheoni/DiscordTestBot#readme",
   "dependencies": {
     "discord.js": "^11.3.2",
-    "overwatch-js": "^1.8.0"
+    "node-fetch": "^2.3.0"
   }
 }
