--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "Discord-Overwatch-Leaderboard",
-  "version": "1.0.0",
-  "description": "Learning how to make a discord bot",
+  "version": "2.0.0",
+  "description": "An overwatch leaderboard in your server!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "install": "node dbInit --force"
   },
   "engines": {
     "node": "8.11.3"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Zheoni/DiscordTestBot.git"
+    "url": "git+https://github.com/Zheoni/Discord-Overwatch-Leaderboard.git"
   },
   "author": "Zheoni",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Zheoni/DiscordTestBot/issues"
+    "url": "https://github.com/Zheoni/Discord-Overwatch-Leaderboard/issues"
   },
-  "homepage": "https://github.com/Zheoni/DiscordTestBot#readme",
+  "homepage": "https://github.com/Zheoni/Discord-Overwatch-Leaderboard#readme",
   "dependencies": {
     "discord.js": "^11.3.2",
     "node-fetch": "^2.3.0",
