--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An overwatch leaderboard in your server!",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node --watch index.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +17,7 @@
   },
   "homepage": "https://github.com/Zheoni/Discord-Overwatch-Leaderboard#readme",
   "dependencies": {
-    "@prisma/client": "4.14.1",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.0.3",
-    "prisma": "^4.14.1"
+    "dotenv": "^16.0.3"
   }
 }
